rules.v4
# Generated by iptables-save v1.8.8 on Wed Dec 21 04:30:23 2022
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DIVERT - [0:0]
:V2RAY - [0:0]
:V2RAY_MASK - [0:0]
-A PREROUTING -p tcp -m socket -j DIVERT
-A PREROUTING -j V2RAY
-A OUTPUT -j V2RAY_MASK
-A DIVERT -j MARK --set-xmark 0x1/0xffffffff
-A DIVERT -j ACCEPT
-A V2RAY -d 127.0.0.1/32 -j RETURN
-A V2RAY -d 224.0.0.0/4 -j RETURN
-A V2RAY -d 255.255.255.255/32 -j RETURN
-A V2RAY -d 192.168.0.0/16 -p tcp -j RETURN
-A V2RAY -d 192.168.0.0/16 -p udp -m udp ! --dport 53 -j RETURN
-A V2RAY -m mark --mark 0xff -j RETURN
-A V2RAY -p udp -j TPROXY --on-port 12345 --on-ip 127.0.0.1 --tproxy-mark 0x1/0xffffffff
-A V2RAY -p tcp -j TPROXY --on-port 12345 --on-ip 127.0.0.1 --tproxy-mark 0x1/0xffffffff
-A V2RAY_MASK -d 224.0.0.0/4 -j RETURN
-A V2RAY_MASK -d 255.255.255.255/32 -j RETURN
-A V2RAY_MASK -d 192.168.0.0/16 -p tcp -j RETURN
-A V2RAY_MASK -d 192.168.0.0/16 -p udp -m udp ! --dport 53 -j RETURN
-A V2RAY_MASK -m mark --mark 0xff -j RETURN
-A V2RAY_MASK -p udp -j MARK --set-xmark 0x1/0xffffffff
-A V2RAY_MASK -p tcp -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Wed Dec 21 04:30:23 2022
